--- a/TP WebApp/Presentacion/Views/Shared/_MenuSuperior.cshtml
+++ b/TP WebApp/Presentacion/Views/Shared/_MenuSuperior.cshtml
@@ -1,9 +1,9 @@
 ﻿<nav>
     <div class="container-fluid">
         <ul class="nav nav-tabs">
-            <li>@Html.ActionLink("Registrar Usuario", "Index", "Registrar Usuario")</li>
-            <li>@Html.ActionLink("Registrar País", "Index", "Registrar Pais")</li>
-            <li>@Html.ActionLink("Registro de Horarios", "Index", "Registro de Horarios")</li>
+            <li>@Html.ActionLink("Empleado", "Index", "Employee")</li>
+            <li>@Html.ActionLink("Registrar País", "Index", "CountryRegister")</li> //Cambiar el nombre del Controller 
+            <li>@Html.ActionLink("Registrar Horarios", "Index", "TimeRegister")</li>
         </ul>
     </div>
 </nav>
