Implementando CRUD Empleados

--- a/TP WebApp/Presentacion/Views/Shared/_MenuSuperior.cshtml
+++ b/TP WebApp/Presentacion/Views/Shared/_MenuSuperior.cshtml
@@ -2,7 +2,7 @@
     <div class="container-fluid">
         <ul class="nav nav-tabs">
             <li>@Html.ActionLink("Empleado", "Index", "Employee")</li>
-            <li>@Html.ActionLink("Registrar País", "Index", "CountryRegister")</li> //Cambiar el nombre del Controller 
+            <li>@Html.ActionLink("Registrar País", "Index", "CountryRegister")</li> 
             <li>@Html.ActionLink("Registrar Horarios", "Index", "TimeRegister")</li>
         </ul>
     </div>
