Prueba de la primer carga de lista de empleados

--- a/TP WebApp/Presentacion/Views/Shared/_MenuSuperior.cshtml
+++ b/TP WebApp/Presentacion/Views/Shared/_MenuSuperior.cshtml
@@ -1,9 +1,9 @@
 ﻿<nav>
     <div class="container-fluid">
         <ul class="nav nav-tabs">
-            <li>@Html.ActionLink("Empleado", "Index", "Employee")</li>
-            <li>@Html.ActionLink("Registrar País", "Index", "CountryRegister")</li> 
-            <li>@Html.ActionLink("Registrar Horarios", "Index", "TimeRegister")</li>
+            <li>@Html.ActionLink("Employee", "Index", "Employee")</li>
+            <li>@Html.ActionLink("Register Country", "Index", "CountryRegister")</li> 
+            <li>@Html.ActionLink("Register Time", "Index", "TimeRegister")</li>
         </ul>
     </div>
 </nav>
