arreglos en la muestra de propiedades de employee

--- a/TP WebApp/Presentacion/Views/Employee/Index.cshtml
+++ b/TP WebApp/Presentacion/Views/Employee/Index.cshtml
@@ -16,9 +16,9 @@
                 <td>@employee.ID</td>
                 <td>@employee.FirstName</td>
                 <td>@employee.LastName</td>
-                <td>@employee.Country</td>
+                <td>@employee.Country.CountryName</td>
                 <td>@employee.EntryDate</td>
-                <td>@employee.CurrentShift</td>
+                <td>@employee.CurrentShift.Name</td>
                 <td>@employee.ValueByHour</td>
             </tr>
         }
