Agregado getall en crud country y avance en el crud de paises

--- a/TP WebApp/Presentacion/Views/Country/Create.cshtml
+++ b/TP WebApp/Presentacion/Views/Country/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿<form action="/country/create" method="post">
     <div>
         <label>Country</label>
-        <input type="text" name="Name" required />
+        <input type="text" name="CountryName" required />
     </div>
     <div>
         <button type="submit">Save</button>
