--- a/TP WebApp/Presentacion/Views/Country/Update.cshtml
+++ b/TP WebApp/Presentacion/Views/Country/Update.cshtml
@@ -1,13 +1,13 @@
-﻿@model Services.Dto //falta servicios de pais
+﻿@model Services.CountryModel
 
 <form action="/country/update" method="post">
     <div>
         <label>Id</label>
-        <input type="text" name="Id" value="@Model.Id" />
+        <input type="text" name="ID" value="@Model.ID" />
     </div>
     <div>
-        <label>Title</label>
-        <input type="text" name="Name" value="@Model.Nombre" />
+        <label>Country Name</label>
+        <input type="text" name="CountryName" value="@Model.CountryName" />
     </div>
     <div>
         <button type="submit">Save</button>
