--- a/TP WebApp/Presentacion/Views/Employee/Index.cshtml
+++ b/TP WebApp/Presentacion/Views/Employee/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿<div>
-    <table class="table table-bordered" >
+    <table class="table table-striped" >
         <tr>
             <th>ID</th>
             <th>Name</th>
