--- a/TP WebApp/Presentacion/Views/Country/Update.cshtml
+++ b/TP WebApp/Presentacion/Views/Country/Update.cshtml
@@ -3,11 +3,11 @@
 <form action="/country/update" method="post">
     <div>
         <label>Id</label>
-        <input type="text" name="ID" value="@Model.ID" />
+        <input type="text" name="ID" value="@Model.ID" readonly />
     </div>
     <div>
         <label>Country Name</label>
-        <input type="text" name="CountryName" value="@Model.CountryName" />
+        <input type="text" name="CountryName" value="@Model.CountryName" required />
     </div>
     <div>
         <button type="submit">Save</button>
