Creada Index de Home con informacion basica de inicio y modificado el menu superior para mostrar menus con direccionamiento y aplicado un poco de estilo, falta terminarlo para que quede lindo y brillante

--- a/TP WebApp/Presentacion/Views/Home/Index.cshtml
+++ b/TP WebApp/Presentacion/Views/Home/Index.cshtml
@@ -1,1 +1,43 @@
-﻿
+﻿<style>
+   .inside {
+               
+        padding-top: 0px;
+        padding-right: 30px;
+        padding-bottom: 0px;
+        padding-left: 40px;
+    }
+</style>
+
+<h1>Welcome!</h1>
+<h3>Employee Control System </h3>
+
+<p>    This program was created by experts. It allows you to have a record of your employees.
+    Thank you for choosing us.</p>
+
+<p>You can do: </p>
+
+<div>
+   <p> ->Employee Crud:</p>
+    <div class="inside">
+        <p>    -Create new Employee.</p>
+        <p>   -Read Employee.</p>
+        <p>   -Update Employee.</p>
+        <p>   -Delete Employee.</p>
+        <p>   -Show all Employees.</p>
+    </div>
+  <p> ->Country Crud:</p>
+    <div class="inside">
+        <p>     -Create new Country.</p>
+        <p>     -Read Country.</p>
+        <p>     -Update Country.</p>
+        <p>     -Delete Country.</p>
+        <p>   -Show all Countries.</p>
+    </div>
+   <p> ->Hour Register</p>
+   
+  <p> ->Employee Salary</p>
+   
+ </div>
+
+
+
