--- a/TP WebApp/Presentacion/Views/Shared/_Layout.cshtml
+++ b/TP WebApp/Presentacion/Views/Shared/_Layout.cshtml
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="~/Content/bootstrap.css" rel="stylesheet" />
     <link href="~/Content/Site.css" rel="stylesheet" />
-    <title>@ViewBag.Title - My ASP.NET Application</title>
+    <title>@ViewBag.Title - LAB .NET Application</title>
 </head>
 <body>
     @Html.Partial("_MenuSuperior")
