--- a/TP WebApp/Presentacion/Views/Shared/_MenuSuperior.cshtml
+++ b/TP WebApp/Presentacion/Views/Shared/_MenuSuperior.cshtml
@@ -2,8 +2,8 @@
     <div class="container-fluid">
         <ul class="nav nav-tabs">
             <li>@Html.ActionLink("Employee", "Index", "Employee")</li>
-            <li>@Html.ActionLink("Register Country", "Index", "CountryRegister")</li> 
-            <li>@Html.ActionLink("Register Time", "Index", "TimeRegister")</li>
+            <li>@Html.ActionLink("Register Country", "Index", "Country")</li>
+            <li>@Html.ActionLink("Register Time", "Index", "Shift")</li>
         </ul>
     </div>
 </nav>
