--- a/TP WebApp/Presentacion/Views/Employee/ModifyEmployee.cshtml
+++ b/TP WebApp/Presentacion/Views/Employee/ModifyEmployee.cshtml
@@ -1,12 +1,19 @@
-﻿@model List<Services.EmployeeModel>
+﻿@model Services.EmployeeModel
 
 <br/>
-@Html.ActionLink("New Employee", "Form")
-<br/><br />
+@using (Html.BeginForm("ModifyEmployee", "Employee", FormMethod.Get))
 
+{
+    @Html.LabelFor(e => e.FirstName, "Employee")
+    @Html.DropDownListFor(e => e.ID,
+        new SelectList(ViewBag.AllEmployees, "ID", "FirstName"),
+        new { @class = "form-control" })
 
-<table class="table table-hover">
-    <thead>
+    <input type="submit" value="Search"/>
+}
+
+@*<table class="table table-hover">
+     <thead>
         <tr>
             <th>ID</th>
             <th>First Name</th>
@@ -18,7 +25,7 @@
         </tr>
     </thead>
     <tbody>
-        @foreach (var employee in Model)
+        @foreach (var employee in ViewBag.EmployeeFound)
         {
             <tr>
                 <td>@employee.ID</td>
@@ -31,4 +38,4 @@
             </tr>
         }
     </tbody>
-</table>
+</table>*@
