Un cambio visual que estaba mal ubicado y agregado un link y cambiado la busqueda en el crud por nombre a por id

--- a/TP WebApp/Presentacion/Views/Shared/_MenuSuperior.cshtml
+++ b/TP WebApp/Presentacion/Views/Shared/_MenuSuperior.cshtml
@@ -67,8 +67,8 @@
                     <div class="dropdown-content">
                         <a href="/Employee/Form">Create</a>
                         <a href="#">Read</a>
-                        <a href="#">Update</a>
-                        <a href="#">Delete</a>
+                        <a href="/Employee/ModifyEmployee">Update</a>
+                        <a href="/Employee/DeleteEmployee">Delete</a>
                         <a href="/Employee/Index">Show All</a>
                     </div>
                 </div>
@@ -83,7 +83,7 @@
                 </div>
 
             </li>
-            <li>@Html.ActionLink("Hour Register", "Cash", "Shift")</li>
+            <li>@Html.ActionLink("Hour Register", "Register", "Shift")</li>
             <li>@Html.ActionLink("Employee Salary", "Cash", "Shift")</li>
 
         </ul>
