--- a/TP WebApp/Presentacion/Views/Employee/Form.cshtml
+++ b/TP WebApp/Presentacion/Views/Employee/Form.cshtml
@@ -14,7 +14,7 @@
 
     @Html.LabelFor(e => e.Country.CountryName, "Country:")
     @Html.DropDownListFor(e => e.Country.ID,
-        new SelectList(ViewBag.AllCountries, "ID", "CountryName"),
+        new SelectList(ViewBag.AllCountries, "ID", "CountryName",1),
         new { @class = "form-control" })<br />
     @Html.ValidationMessageFor(e => e.Country.CountryName)
 
@@ -24,7 +24,7 @@
 
     @Html.LabelFor(e => e.CurrentShift.Name, "Shift:")
     @Html.DropDownListFor(e => e.CurrentShift.ID,
-        new SelectList(ViewBag.AllShifts, "ID", "Name"),
+        new SelectList(ViewBag.AllShifts, "ID", "Name",1),
         new { @class = "form-control" })<br />
         @Html.ValidationMessageFor(e => e.CurrentShift.Name)
 
