Implementando el ModelValidator de la presentacion del crudEmployees

--- a/TP WebApp/Presentacion/Views/Employee/ModifyEmployee.cshtml
+++ b/TP WebApp/Presentacion/Views/Employee/ModifyEmployee.cshtml
@@ -8,8 +8,8 @@
     {
         @Html.LabelFor(e => e.FirstName, "Employee")
         @Html.DropDownListFor(e => e.ID,
-                     new SelectList(ViewBag.AllEmployees, "ID", "FirstName"),
-                     new { @class = "form-control" })
+                          new SelectList(ViewBag.AllEmployees, "ID", "FirstName"),
+                          new { @class = "form-control" })
 
         <input type="submit" value="Search" />
     }
@@ -19,7 +19,7 @@ else
     //armate el form para editar aca
     <h1>@Model.FirstName @Model.LastName</h1>
 
-    using (Html.BeginForm("Add", "Employee", FormMethod.Post))
+    using (Html.BeginForm("Update", "Employee", FormMethod.Post))
     {
         <br />
         @Html.LabelFor(e => e.FirstName, "First Name:")
@@ -30,21 +30,21 @@ else
         @Html.TextBoxFor(e => e.LastName, new { @class = "form-control" })<br />
         @Html.ValidationMessageFor(e => e.LastName)
 
-        @*@Html.LabelFor(e => e.Country.CountryName, "Country:")
-        @Html.DropDownListFor(e => e.Country.CountryName,
-        new SelectList(ViewBag.AllCountries, "ID", "CountryName"),
-        new { @class = "form-control" })<br />
-        @Html.ValidationMessageFor(e => e.Country.CountryName)*@
+        @Html.LabelFor(e => e.Country.CountryName, "Country:")
+        @Html.DropDownListFor(e => e.Country.ID,
+             new SelectList(ViewBag.AllCountries, "ID", "CountryName", 1),
+             new { @class = "form-control" })<br />
+        @Html.ValidationMessageFor(e => e.Country.CountryName)
 
         @Html.LabelFor(e => e.EntryDate, "Entry Date:")
         @Html.TextBoxFor(e => e.EntryDate, new { @class = "form-control" })<br />
         @Html.ValidationMessageFor(e => e.EntryDate)
 
-        @*@Html.LabelFor(e => e.CurrentShift.Name, "Shift:")
+        @Html.LabelFor(e => e.CurrentShift.Name, "Shift:")
         @Html.DropDownListFor(e => e.CurrentShift.ID,
-        new SelectList(ViewBag.AllShifts, "ID", "Name"),
-        new { @class = "form-control" })<br />
-        @Html.ValidationMessageFor(e => e.CurrentShift.Name)*@
+             new SelectList(ViewBag.AllShifts, "ID", "Name", 1),
+             new { @class = "form-control" })<br />
+        @Html.ValidationMessageFor(e => e.CurrentShift.Name)
 
         @Html.LabelFor(e => e.ValueByHour, "Value by Hour:")
         @Html.TextBoxFor(e => e.ValueByHour, new { @class = "form-control" })<br />
@@ -52,5 +52,4 @@ else
 
         <input type="submit" value="Modify" />
     }
-
 }
