--- a/TP WebApp/Presentacion/Views/Shared/_Layout.cshtml
+++ b/TP WebApp/Presentacion/Views/Shared/_Layout.cshtml
@@ -10,12 +10,18 @@
 <body>
     @Html.Partial("_MenuSuperior")
     <div class="container">
-        <main class="col-sm-8">
-            @RenderBody()
-        </main>
-        <aside class="col-sm-4">
-                          
-        </aside>
+        <div class="row">
+
+            <div class="col-sm-2"></div>
+
+            <main class="col-sm-8">
+                @RenderBody()
+            </main>
+
+            <div class="col-sm-2"></div>
+
+        </div>
+        
 
     </div>
 </body>
